# sayd-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: curl-examples.md
scripts/: setup-hooks.sh
src/sayd_ai/: __init__.py  client.py  exceptions.py  listen.py  models.py  talk.py  transcribe.py  vad.py
tests/: test_client.py  test_exceptions.py  test_integration.py  test_models.py  test_resources.py
